--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,18 +9,18 @@
 */
 
 * {
-  padding: 0;
+ /* padding: 0;
   margin: 0;
   box-sizing: border-box;
+  */
   font-family: "Poppins", sans-serif;
 }
 body {
 
-background-color: #0e6596;
-background-image: linear-gradient(337deg, #0e6596 0%, #22e0b6 24%, #e0cece 49%, #2bb9d6 75%, #1bda4b 100%);
-
+/*background-color: #0e6596;*/
+/* background-image:linear-gradient(337deg, #0e6596 0%, #22e0b6 24%, #e0cece 49%, #2bb9d6 75%, #1bda4b 100%);*/
 }
-.container {
+.main-container {
 background-color: #ffffff; 
   /*background-image:'./assets/images/hollow_earth_rotate_300_wht.gif' ;*/
   width:100%;
@@ -50,7 +50,7 @@ background-color: #ffffff;
 }
 .search-wrapper input {
   font-size: 1em;
-  padding: 0 0.62em;
+  padding: 0 0.9em;
   border: none;
   border-bottom: 2px solid #3d64e6;
   outline: none;
@@ -65,7 +65,8 @@ background-color: #ffffff;
   min-width: 7.5em;
   margin: 1.8em auto 1.2em auto;
 }
-.container h2 {
+
+.main-container h2 {
   font-weight: 600;
   color: #222a43;
   text-align: center;
@@ -77,15 +78,15 @@ background-color: #ffffff;
   margin-bottom: 1em;
   letter-spacing: 0.3px;
 }
-.container h4 {
+.main-container h5 {
   display: inline;
   font-weight: 500;
   color: #222a43;
 }
-.container span {
+.main-container span {
   color: #5d6274;
 }
-.container h3 {
+.main-container h3 {
   text-align: center;
   font-size: 1.2em;
   font-weight: 400;
@@ -99,6 +100,7 @@ background-color: #ffffff;
   border-radius: 0;
 font-weight: 400;
 }
+
 
 #star {
   visibility:hidden;
@@ -114,4 +116,20 @@ font-weight: 400;
 #star:checked:before {
  content: "\2606";
  position: absolute;
+}
+
+
+.loader {
+  border: 8px solid #f3f3f3; /* Light grey */
+  border-top: 8px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin .8s linear infinite;
+  ;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
