--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@
 }
 body {
 
-/*background-color: #0e6596;*/
+background-color: #0e6596;
 /* background-image:linear-gradient(337deg, #0e6596 0%, #22e0b6 24%, #e0cece 49%, #2bb9d6 75%, #1bda4b 100%);*/
 }
 .main-container {
